--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mysql2": "^1.3.6",
     "pg": "6.1.0",
     "pg-hstore": "2.3.2",
-    "sequelize": "3.24.3",
+    "sequelize": "3.24.3"
   },
   "devDependencies": {
     "nodemon": "1.10.2"
