--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "mysql2": "^1.3.6",
     "pg": "6.1.0",
     "pg-hstore": "2.3.2",
-    "sequelize": "3.24.3"
+    "sequelize": "^4.4.2"
   },
   "devDependencies": {
-    "nodemon": "1.10.2"
+    "nodemon": "^1.10.2"
   }
 }
